# PBML-LTI-TMLR-2026

./: .gitignore  README.md  eval.sh  generate.sh  pyproject.toml  requirements.txt  train.sh
outputs/: A_task_mean_stats.json  report.json
runs/: last.ckpt  train_log.csv
src/bayes_lti/: __init__.py  cli.py  data.py  eval.py  math_utils.py  model.py  plot.py  train.py
src/bayes_lti/baselines/: __init__.py  base.py  ols.py  pooled_prior_ridge.py  registry.py  ridge.py  shared_subspace.py
