[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes-lti"
version = "0.1.0"
description = "Bayesian meta-learning for LTI system identification with PAC-Bayes objective (PyTorch)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Bayes LTI" }
]
license = { text = "MIT" }
dependencies = [
  "torch>=2.2",
  "numpy>=1.23",
  "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
